1. Removed old unused folder structure. 2. Changed welcome page to login page. 3. Added Email Address validation during signup. 4. [Bug fix] Was showing wrong messages during signup corrected it.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,6 +16,6 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>jsp/login.html</welcome-file>
 	</welcome-file-list>
 </web-app>
