--- a/WebContent/WEB-INF/classes/config.properties
+++ b/WebContent/WEB-INF/classes/config.properties
@@ -4,3 +4,5 @@ datasource.database.name=OVuEMmcfwY
 datasource.username=OVuEMmcfwY
 datasource.password=qsiQzp0Qij
 datasource.pool.size=7
+
+hmac.key=key
