--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
-	<display-name>WebsiteBase</display-name>
+	<display-name>CurlyOcto</display-name>
 
 	<filter>
 		<filter-name>struts2</filter-name>
@@ -15,7 +15,14 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<servlet>
+		<servlet-name>Startup</servlet-name>
+		<servlet-class>main.startup.Startup</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
 	<welcome-file-list>
 		<welcome-file>jsp/login.html</welcome-file>
 	</welcome-file-list>
+
 </web-app>
