Setting default landing page to user's dashboard. If no one is logged in, AuthenticationInterceptor will throw Auth error and so user will be redirected to login page.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	</servlet>
 
 	<welcome-file-list>
-		<welcome-file>jsp/login.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
 </web-app>
